Resized footer font.

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ body {
 .panel-footer {
   /*background: #9fd4f0;*/
   background: #f1f1e6;
+  font-size: 0.8em;
 }
 
 /********** Medium devices only **********/
