--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,12 @@ body {
   border: 1px solid #044c64;
 }
 
+#login-region > div {
+  margin: 0px 20px 0px 20px;
+  border: 1px solid #044c64;
+  background: #f1f1e6;
+}
+
 #free-trial span {
   font-weight: bold;
   color: #044c64;
